force-app/main/default/objects/Snapshot_Report_Object__c/Snapshot_Report_Object__c.object-meta.xml
<CustomObject>
    <description>Custom Object that stores values from snapshot source reports. The object is then used for the weekly snapshot report.</description>
    <label>Snapshot Report Object</label>
    <nameField>
        <label>Snapshot Report Object</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Snapshot Report Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>