force-app/main/default/objects/Snapshot_Report_Object__c/fields/Active_Customer_Users__c.field-meta.xml
<CustomField>
    <fullName>Active_Customer_Users__c</fullName>
    <description>Active Customer users for monthly snapshot report</description>
    <label>Active Customer Users</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>