force-app/main/default/objects/Snapshot_Report_Object__c/fields/Active_Partner_Users__c.field-meta.xml
<CustomField>
    <fullName>Active_Partner_Users__c</fullName>
    <description>Active Partner Users for Monthly Snapshot Report</description>
    <label>Active Partner Users</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>