force-app/main/default/objects/Snapshot_Report_Object__c/fields/Aging_Category__c.field-meta.xml
<CustomField>
    <fullName>Aging_Category__c</fullName>
    <label>Aging Category</label>
    <length>80</length>
    <type>Text</type>
</CustomField>