force-app/main/default/objects/Snapshot_Report_Object__c/fields/Average_Score__c.field-meta.xml
<CustomField>
    <fullName>Average_Score__c</fullName>
    <label>Average Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>