force-app/main/default/objects/Snapshot_Report_Object__c/fields/Case_Satisfaction_Score__c.field-meta.xml
<CustomField>
    <fullName>Case_Satisfaction_Score__c</fullName>
    <label>Case Satisfaction Score</label>
    <length>80</length>
    <type>Text</type>
</CustomField>