force-app/main/default/objects/Snapshot_Report_Object__c/fields/Customer_Care_Cases__c.field-meta.xml
<CustomField>
    <fullName>Customer_Care_Cases__c</fullName>
    <description>Holding field in snapshot object to capture cases created each month.  Putting in snapshot field lets you avoid joined report and associated limitations.</description>
    <label>Customer Care Cases</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>