force-app/main/default/objects/Snapshot_Report_Object__c/fields/Delinquent_Amount__c.field-meta.xml
<CustomField>
    <fullName>Delinquent_Amount__c</fullName>
    <label>Delinquent Amount</label>
    <length>80</length>
    <type>Text</type>
</CustomField>