force-app/main/default/objects/Snapshot_Report_Object__c/fields/Partner_Support_Cases__c.field-meta.xml
<CustomField>
    <fullName>Partner_Support_Cases__c</fullName>
    <description>Partner Support Cases snapshot field.  Allows for reporting without using joined reports.</description>
    <label>Partner Support Cases</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>