force-app/main/default/objects/Snapshot_Report_Object__c/fields/Promoters__c.field-meta.xml
<CustomField>
    <fullName>Promoters__c</fullName>
    <label>Promoters</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>