force-app/main/default/objects/Snapshot_Report_Object__c/fields/Records_by_Grouping__c.field-meta.xml
<CustomField>
    <fullName>Records_by_Grouping__c</fullName>
    <label>Records by Grouping</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>