force-app/main/default/objects/Snapshot_Report_Object__c/fields/Report_Name__c.field-meta.xml
<CustomField>
    <fullName>Report_Name__c</fullName>
    <label>Report Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>