force-app/main/default/objects/Snapshot_Report_Object__c/fields/Total_Active_Users__c.field-meta.xml
<CustomField>
    <fullName>Total_Active_Users__c</fullName>
    <description>Only counts partner and customer users.  Used for Cases per User per Month reporting snapshot.</description>
    <inlineHelpText>Only counts partner and customer users.  Used for Cases per User per Month reporting snapshot.</inlineHelpText>
    <label>Total Active Users</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>