force-app/main/default/objects/Snapshot_Report_Object__c/fields/Total_Cases__c.field-meta.xml
<CustomField>
    <fullName>Total_Cases__c</fullName>
    <description>Counts cases created</description>
    <inlineHelpText>Counts cases created</inlineHelpText>
    <label>Total Cases</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>