force-app/main/default/objects/Snapshot_Report_Object__c/fields/Total_System_Size_kW_DC__c.field-meta.xml
<CustomField>
    <fullName>Total_System_Size_kW_DC__c</fullName>
    <label>Total System Size (kW DC)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>