force-app/main/default/objects/Snapshot_Report_Object__c/fields/Weeks_Since_Last_Contact__c.field-meta.xml
<CustomField>
    <fullName>Weeks_Since_Last_Contact__c</fullName>
    <label>Weeks Since Last Contact</label>
    <length>80</length>
    <type>Text</type>
</CustomField>